--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -53,7 +53,7 @@
         @media screen and (max-width: 768px), screen and (orientation: portrait) {
             flex-basis: 100%;
             text-align: center;
-            
+            margin-right: 0;
 
             // .aside {
             //     display: flex !important;
@@ -85,6 +85,8 @@
     
         ul {
             list-style-type: none;
+            display: flex;
+            flex-wrap: wrap;
 
             @media screen and (max-width: 768px), screen and (orientation: portrait) {
                 // margin: 0 1em;
@@ -95,6 +97,11 @@
             li {
                 display: inline-block;
                 margin-right: 0.5em;
+
+                @media screen and (max-width: 768px) {
+                    flex-basis: 33.33%;
+                    margin: 0;
+                }
                 
                 a {
                     font-family: 'Julius Sans One', 'sans-serif';
@@ -102,9 +109,10 @@
                     color: $nac-font-1;
                     font-weight: 600;
 
-                    @media screen and (max-width: 768px), screen and (orientation: portrait) {
+                    @media screen and (max-width: 768px) {
                         margin: 0 1em;
-                        font-size: $font-xs;
+                        // font-size: $font-xs;
+                        font-size: 0.66em;
                     }
 
                     &:hover {
@@ -126,8 +134,6 @@
     }
 }
 
-
-
 .page {
     padding: 0 $padding-large;
     // display: flex;
@@ -148,7 +154,7 @@
             // flex-basis: 66%;
         }
 
-        @media screen and (max-width: 768px), screen and (orientation: portrait) {
+        @media screen and (max-width: 768px) {
             display: block;
         }
 
@@ -162,8 +168,14 @@
                 min-height: 3.5rem;
                 margin: 1.5em 0 0.25em;
 
+                @media screen and (max-width: 768px) {
+                    margin: 0.25em 0;
+                }
+
                 a {
                     font-size: $font-l;
+
+                    
 
                     &:hover {
                         // color: $nac-color;
@@ -309,7 +321,6 @@
             }
         }
     }
-   
 }
 
 #pagination {
