--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,19 +1,3 @@
-#burger, #close {
-    top: 20px;
-    right: 20px;
-    width: 30px;
-    height: 23px;
-    cursor: pointer;
-
-    // @media screen and (max-width: 768px), screen and (orientation: portrait) {
-    // @media screen and (orientation: portrait) {
-    //     // width: 15vw;
-    //     // height: 11,5vh;
-    //     width: 60px;
-    //     height: 46px;
-    // }
-}
-
 #burger {
     position: fixed;
     z-index: 10;
@@ -26,6 +10,18 @@
     z-index: 30;
     background: url('../img/close.svg') no-repeat;
     background-size: contain;
+}
+
+#burger, #close {
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 23px;
+    cursor: pointer;
+
+    // @media screen and (max-width: 768px) {
+    //     right: 2em;
+    // }
 }
 
 #menu {
@@ -46,8 +42,8 @@
     grid-template-rows: 50vh 47.5vh 1.5em;
 
     @media screen and (max-width: 768px) {
-    // @media screen and (max-width: 768px), screen and (orientation: portrait) {
         width: 100%;
+        transition: transform 0.35s;
         padding: 2em;
     }
 
@@ -87,6 +83,7 @@
                 max-height: 50vh;
             }
         }
+
         .menu-item-has-children > a {
             cursor: pointer;
 
@@ -94,13 +91,6 @@
                 content: " ↓"; //› ·▾
             }
         }
-        // .menu-item-has-children:hover {
-        //     color: $nac-color;
-
-        //     ul {
-        //         max-height: 50vh !important;
-        //     }
-        // }
     }
 
     a {
@@ -109,30 +99,11 @@
         text-decoration: none;
 
         &:hover {
-            // color: $nac-color;
             color: $kadra-logo;
             text-decoration: underline;
         }
 
-        // &[href*="acces-box"] {
-        //     padding: 0.25em;
-        //     border: 1px solid $white;
-        //     border-left: none;
-        //     list-style-type: disc;
-
-        //     &:hover {
-        //         padding: 0.5em ;
-        //         border: 1px solid $nac-color;
-        //         border-left: none;
-        //     }
-        // }
     }
-
-    // .box::before {
-    //     content: "Espace clients";
-    //     display: block;
-    //     background: red;
-    // }
 
     .box {
         margin-top: 3em;
@@ -150,11 +121,6 @@
                 border-left: none;
             }
         }
-    }
-
-    @media screen and (max-width: 768px), screen and (orientation: portrait) {
-        width: 100%;
-        transition: transform 0.35s;
     }
 }
 
