--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -166,8 +166,8 @@
             // padding: 0 20px;
         }
     
-        @media screen and (max-width: 768px), screen and (orientation: portrait) {
-            // display: none;
+        @media screen and (max-width: 768px) {
+            display: none;
         }
     }
 }
